tests/bad/include_ints/float.stderr
error[E0308]: mismatched types
 --> tests/bad/include_ints/float.rs:6:25
  |
6 | static FLOATS: &[f32] = include_ints!(f32, "../../test_data/binary_64");
  |                         ^^^^^^^^^^^^^^---^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                         |             |
  |                         |             expected due to this
  |                         expected `f32`, found integer
  |                         help: use a float literal: `0.0`
  |
  = note: this error originates in the macro `include_ints` (in Nightly builds, run with -Z macro-backtrace for more info)
